--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RECOMENDAFILMES</title>
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    
+<header>
+    RECOMENDAFILMES
+</header>
+<h1> Lançamentos </h1> 
+<p> Melhores filmes para assistir em família </p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/XpZterwuuc4?si=kzCXepuNt5P88qeJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
